playground/notas_tests/invalid/syn-class-keyword.hulk
class Point { x:Number = 0; }
